Update Startup.bat